# sparse-file

./: DESIGN.md  Makefile  README.md  dune-project  sparse-file.opam
src/: dune  file.ml  index.mld  io.ml  io_control.ml  irmin_obj.ml  irmin_simulation.ml  map_test.ml  region_manager.ml  small_int_file_v2.ml  sparse_file.ml  sparse_file_lib.ml  suffix_file.ml  util.ml  worker.ml
test/: dune  test.ml
