(lang dune 2.0)
(name sparse-file-pkg)

;; for opam
(authors "Tom Ridge <tom.j.ridge@googlemail.com>")
(maintainers "Tom Ridge <tom.j.ridge@googlemail.com>")
(source (github tomjridge/sparse-file))
(homepage https://github.com/tomjridge/sparse-file)
;; (documentation https://tomjridge.github.io/sparse-file/ocamldoc/index.html)
(generate_opam_files true)


(package 
 (name sparse-file-pkg)
 (synopsis "FIXME")
 (depends))


